fix target language issue under three locales (Hebrew[iw->he], Fillipion[tl->fil], and Nowreign[no->nb]

BUG=664791

Review-Url: https://codereview.chromium.org/2802613004
Cr-Commit-Position: refs/heads/master@{#464758}

Former-commit-id: 5d482d74629b9a30493f0c0201fd6863ec1c1ece